--- a/.github/workflows/go-check.yml
+++ b/.github/workflows/go-check.yml
@@ -17,17 +17,10 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: "1.19.x"
-      - name: Run repo-specific setup
-        uses: ./.github/actions/go-check-setup
-        if: hashFiles('./.github/actions/go-check-setup') != ''
-      - name: Read config
-        if: hashFiles('./.github/workflows/go-check-config.json') != ''
-        run: |
-          if jq -re .gogenerate ./.github/workflows/go-check-config.json; then
-            echo "RUNGOGENERATE=true" >> $GITHUB_ENV
-          fi
       - name: Install staticcheck
         run: go install honnef.co/go/tools/cmd/staticcheck@376210a89477dedbe6fdc4484b233998650d7b3c # 2022.1.3 (v0.3.3)
+      - name: OpenSSL versions
+        run: dpkg -l | egrep '\s+(libssl|openssl)'
       - name: Check that go.mod is tidy
         uses: protocol/multiple-go-modules@v1.2
         with:
