Migrate to OpenSSL3 (#5)

--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ "ubuntu-20.04", "ubuntu-latest", "windows-latest", "macos-latest" ]
+        os: [ "ubuntu-latest", "windows-latest", "macos-latest" ]
         go: [ "1.18.x", "1.19.x" ]
     env:
       COVERAGES: ""
@@ -26,6 +26,9 @@ jobs:
         run: |
           go version
           go env
+      - name: OpenSSL versions
+        if: ${{ startsWith(matrix.os, 'ubuntu') }}
+        run: dpkg -l | egrep '\s+(libssl|openssl)'
       - name: Use msys2 on windows
         if: ${{ startsWith(matrix.os, 'windows') }}
         shell: bash
@@ -44,15 +47,6 @@ jobs:
           # If package ./A imports ./B, and ./A's tests also cover ./B,
           # this means ./B's coverage will be significantly higher than 0%.
           run: go test -v -shuffle=on -coverprofile=module-coverage.txt -coverpkg=./... ./...
-      - name: Run tests (32 bit)
-        if: ${{ !startsWith(matrix.os, 'macos') }} # can't run 32 bit tests on OSX.
-        uses: protocol/multiple-go-modules@v1.2
-        env:
-          GOARCH: 386
-        with:
-          run: |
-            export "PATH=${{ env.PATH_386 }}:$PATH"
-            go test -v -shuffle=on ./...
       - name: Run tests with race detector
         if: ${{ startsWith(matrix.os, 'ubuntu') }} # speed things up. Windows and OSX VMs are slow
         uses: protocol/multiple-go-modules@v1.2
